--- a/_posts/2023-01-15-はじめての記事.md
+++ b/_posts/2023-01-15-はじめての記事.md
@@ -3,11 +3,11 @@ title:
 author: okmksato
 date: 2023-01-15 +0800
 categories: [準備]
-tags: [getting started]
+tags: [getting started,備忘録]
 pin: true
 ---
 
-## やっとブログの環境が整いました
+### やっとブログの環境が整いました
 
 細かい設定とか色々ありますが、メモがわりに始めます
  
