--- a/_posts/2023-01-19-onji.md
+++ b/_posts/2023-01-19-onji.md
@@ -13,6 +13,8 @@ og-image: images/2023-01-19-onji/DSC_1424.jpg
 
 記事の作成中です
 
+恩智神社HP
+http://onji.or.jp/
 
 DSC_1373.jpg
 ![](images/2023-01-19-onji/DSC_1373.jpg)
